deploy/kubernetes/base/employee.yaml
apiVersion: v1
kind: Service
metadata:
  name: employee
spec:
  selector:
    app: employee
  ports:
    - name: http
      port: 8080
      targetPort: 8080
  type: ClusterIP
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: employee
spec:
  selector:
    matchLabels:
      app: employee
  template:
    metadata:
      labels:
        app: employee
    spec:
      containers:
        - name: employee
          image: nrt.ocir.io/orasejapan/shukawam/employee
          ports:
            - containerPort: 7987
