deploy/kubernetes/base/event.yaml
apiVersion: v1
kind: Service
metadata:
  name: event
spec:
  selector:
    app: event
  ports:
    - port: 8080
      targetPort: 8080
  type: ClusterIP
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: event
spec:
  selector:
    matchLabels:
      app: event
  template:
    metadata:
      labels:
        app: event
    spec:
      containers:
        - name: event
          image: nrt.ocir.io/orasejapan/shukawam/event
          ports:
            - name: api
              containerPort: 8080
          readinessProbe:
            httpGet:
              path: /health
              port: api
            initialDelaySeconds: 5
            periodSeconds: 10
          livenessProbe:
            httpGet:
              path: /health
              port: api
            initialDelaySeconds: 15
            periodSeconds: 20
          imagePullPolicy: Always
      imagePullSecrets:
        - name: event-secret
